# OS-Lend-Frontend

./: .gitignore  .testr.conf  .travis.yml  README.md  manage.py  requirements  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: Makefile
doc/source/: conf.py  index.rst
lend_frontend/: lend_form.py  manage.py  settings.py  urls.py  views.py
lend_frontend/lend_frontend/: settings.py  urls.py  wsgi.py
lend_frontend/lend_frontend/templates/: index.html  layout.html
lend_frontend/lend_frontend/templates/partials/: asserts.html  lend_form.html
lend_frontend/lend_frontend/utils/: heat_client_helper.py  string_helper.py
lend_frontend/lib/: heatClient.py
lend_frontend/libs/: nova_flavor_provider.py
lend_frontend/management/commands/: lolilol.py
lend_frontend/static/css/: custom.css
lend_frontend/static/js/: utils.js
lend_frontend/templates/: index.html  layout.html
lend_frontend/templates/partials/: asserts.html  header.html  lend_form.html
lend_frontend/tests/: api_mock.py  test_fake.py
lend_frontend/utils/: heat_client_helper.py  heat_template_fetcher.py  heat_template_helper.py  keystone_helper.py  nova_client_helper.py  poller.py
